@@ -22,6 +22,7 @@ Patches:         Bernhard Reiter (configure issues)
 		 Roy Merkel (specified test exit value)
  		 Robert Collins (subunit support)
                  Micah Cowan (checkmk tool, docs and tests)
+		 Zdenek Crha (new Check API docs, fixes, and tests)
 
 Anybody who has contributed code to Check or Check's build system is
 considered an author.  Send patches to this file to 
